--- a/resources/assets/css/styles_sub.css
+++ b/resources/assets/css/styles_sub.css
@@ -54,10 +54,11 @@
  * **************************************** */
  .d-flex{
     display: flex;
+    flex-direction: row !important;
  }
  .y-flex{
     display: flex;
-    flex-direction: column;
+    flex-direction: column !important;
  }
  .aic{
     align-items: center;
@@ -116,11 +117,17 @@ hr{
 .mt24{
     margin-top: 24px;
 }
+.mt32{
+    margin-top: 32px;
+}
 .mb16{
     margin-bottom: 16px;
 }
 .mb40{
     margin-bottom: 40px;
+}
+.mb120{
+    margin-bottom: 120px;
 }
 .pt64{
     padding-top: 64px;
@@ -130,6 +137,9 @@ hr{
 }
 .g4{
     gap: 4px;
+}
+.g8{
+    gap: 8px;
 }
 .g32{
     gap: 32px;
@@ -340,4 +350,29 @@ td.tot{
 .division.div-tenure span{
     border-color: #3B89FE;
     color: #3B89FE;
+}
+/* **************************************** *
+ * write - 게시글 작성
+ * **************************************** */
+form.write-wrap{
+    padding: 24px 0;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    border-bottom: 1px solid #666666;
+}
+.write-wrap .input-group,
+.write-wrap .dropdown-group{
+    flex-direction: row !important;
+    gap: 40px;
+}
+.write-wrap .input-group label,
+.write-wrap .dropdown-group h2{
+    width: 104px !important;
+    line-height: 46px;
+    font-size: 15px;
+    font-weight: 500;
+}
+.write-wrap .input-group input{
+    flex: 1;
 }
