--- a/resources/assets/css/common.css
+++ b/resources/assets/css/common.css
@@ -77,7 +77,8 @@ button {
 }
 
 button,
-input {
+input,
+textarea {
     font-family: 'Pretendard', sans-serif;
 }
 
@@ -638,7 +639,7 @@ h3.title {
 }
 
 .m-0 {
-    margin: 0;
+    margin: 0 !important;
 }
 
 
@@ -852,6 +853,79 @@ h3.title {
     background: #f8f8f8;
     border: 1px solid #ddd;
     color: #aaa;
+}
+
+/* textarea */
+.input-group.textarea {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    gap: 0;
+}
+
+.input-group.textarea label {
+    color: #000;
+    font-size: 15px;
+    font-weight: 500;
+    flex: 0 0 auto;
+    width: 104px;
+}
+
+.input-group textarea {
+    background: #fff;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    color: #000;
+    font-size: 15px;
+    font-weight: 400;
+    padding: 16px;
+    width: 100%;
+}
+
+.input-group textarea:focus {
+    outline: none;
+}
+
+.input-group textarea::placeholder {
+    color: #aaa;
+}
+
+/* input file */
+.file-group {
+    align-items: center;
+    display: flex;
+}
+
+.file-group h2 {
+    color: #000;
+    font-size: 15px;
+    font-weight: 500;
+    flex: 0 0 auto;
+    width: 104px;
+}
+
+.file-group input[type=file] {
+    display: none;
+}
+
+.file-group label {
+    align-items: center;
+    background: #666;
+    ;
+    border-radius: 4px;
+    color: #fff;
+    font-size: 13px;
+    font-weight: 500;
+    display: flex;
+    height: 32px;
+    padding: 0 16px;
+}
+
+.file-group span {
+    color: #666;
+    font-size: 14px;
+    font-weight: 400;
+    margin: 0 0 0 16px;
 }
 
 /* dropdown-group */
