--- a/resources/assets/css/styles_sub.css
+++ b/resources/assets/css/styles_sub.css
@@ -236,7 +236,42 @@ hr{
     justify-content: center;
     gap: 8px;
 }
-
+.manage-btn-group{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 25px;
+    width: 100%;
+    position: relative;
+}
+.manage-btn-group::after{
+    position: absolute;
+    content: '';
+    border-right: 1px solid #dddddd;
+    height: 12px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+}
+.manage-btn-group button{
+    border: none;
+    background: transparent;
+    padding: 0;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 20px;
+    text-decoration-line: underline;
+}
+.manage-btn-group button.modify{
+    color: #666666;
+}
+.manage-btn-group button.delete{
+    color: #E34140;
+}
 /* **************************************** *
  * Table
  * **************************************** */
@@ -270,6 +305,19 @@ hr{
 }
 td.tot{
     font-weight: 700 !important;
+}
+.img-table tbody tr td{
+    height: 124px;
+}
+.img-table .table-img{
+    height: inherit;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 12px 24px;
+}
+.img-table img{
+    height: 100%;
 }
 
 /* **************************************** *
