ME04생성, NO01 수정

--- a/resources/assets/css/styles_sub.css
+++ b/resources/assets/css/styles_sub.css
@@ -353,7 +353,8 @@ td.tot{
     display: flex;
     justify-content: space-between;
 }
-.search-drop .dropdown-button, .search-drop .btn-wrap button{
+
+.search-drop .dropdown-group .dropdown-list-wrap .dropdown-button{
     height: 36px;
 }
 .search-drop .search{
