--- a/resources/assets/css/styles_sub.css
+++ b/resources/assets/css/styles_sub.css
@@ -52,6 +52,11 @@
     height: 24px;
     cursor: pointer;
 }
+.i.i-circle-close{
+    background-image: url(../img/ico/i-circle-close.png);
+    width: 16px;
+    height: 16px;
+}
 /* **************************************** *
  * flex
  * **************************************** */
@@ -667,6 +672,9 @@ span.cc{
 .flex-btn button{
     width: 100%;
     height: 56px;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
 }
 
 .table-wrap2 .basic-table.type2 tbody tr td{
@@ -705,4 +713,82 @@ span.cc{
     width: 3px;
     height: 3px;
     background-color: #999999;
+}
+
+.edit-input{
+    gap: 0;
+}
+.edit-input.active{
+    border: 1px solid #004F9D;
+    border-radius: 4px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -ms-border-radius: 4px;
+    -o-border-radius: 4px;
+}
+.edit-input .editbtn-wrapper{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.edit-input .editbtn-wrapper input{
+    flex: 1;
+    border: none;
+    text-align: center;
+    height: 40px;
+    line-height: 40px;
+}
+.edit-input .editbtn-wrapper input:focus,
+.edit-input .editbtn-wrapper input:hover{
+    border: none;
+}
+.edit-input .editbtn-wrapper input:focus,
+.edit-input .editbtn-wrapper input:hover{
+    border: none;
+}
+.editbtn-wrap .editbtn{
+    display: flex;
+    position: relative;
+}
+.editbtn-wrap .editbtn::after{
+    position: absolute;
+    content: '';
+    top: 50%;
+    left: 36px;
+    transform: translateY(-50%);
+    height: 12px;
+    border-left: 1px solid #dddddd;
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+}
+.editbtn-wrap .editbtn button{
+    border: none;
+    background: transparent;
+    padding: 10px;
+}
+.editbtn-wrap .editbtn button.save{
+    overflow: hidden;
+    color: #004F9D;
+    text-overflow: ellipsis;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 18px;
+}
+/* .border-add{
+    border: 1px solid #dddddd;
+} */
+.input_file_warp{
+    display: flex;
+    gap: 6px;
+    height: 40px;
+}
+.input_file_warp .input-group{
+    gap: 0;
+    flex: 1;
+}
+.input_file_warp .input-group input[type=text],
+.input_file_warp .file-group label{
+    height: 40px;
 }
